gcc/testsuite/rust/rustc/ui/issues/issue-36617.rs
#![derive(Copy)] // { dg-error ".E0774." "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }

fn main() {}

